# glms

./: .gitignore  CMakeLists.txt  EXAMPLES.md  README.md  changelog.md  compile_flags.txt  profile.sh  release.sh
cmake/modules/: glms_deps.cmake
docs/: integration.md  signatures.md
include/glms/: allocator.h  ast.h  ast_type.h  buffer.h  builtin.h  builtin_old.txt  constants.h  dl.h  env.h  eval.h  eval_old.h  fptr.h  glms.h  io.h  iterator.h  lexer.h  list.h  macros.h  math.h  parser.h  stack.h  string_builder.h  string_view.h  token.h  type.h  version.h
include/glms/emit/: emit.h
include/glms/emit/glsl/: emit_glsl.h
include/glms/modules/: array.h  canvas.h  fetch.h  file.h  image.h  iterator.h  json.h  mat3.h  mat4.h  string.h  vec2.h  vec3.h  vec4.h
include/jscript/: ast.h  buffer.h  builtin.h  constants.h  env.h  eval.h  fptr.h  io.h  jscript.h  lexer.h  list.h  macros.h  parser.h  stack.h  string_view.h  token.h
sample/: and_and.gs  array.gs  array_includes.gs  basic.gs  bool.gs  cantor.gs  canvas.gs  child.gs  cos_sin.gs  dot.gs  emit.glsl  enum.gs  extension.gs  extension2.gs  fetch_json.gs  file.gs  filter.gs  for.gs  func.gs  func2.gs  func_glsl_style.gs  greeting.gs  hash_comment.gs  image.gs  image2.gs  image3.gs  image4.gs  image_circle.gs  image_load.gs  int.gs  json.gs  lerp.gs  loop.gs  map.gs  material.gs  math.gs  matrix.gs  mul.gs  object.gs  or.gs  (+18 more)
sample/assets/: somefile.json
sample/include/: utils.glsl
src/: allocator.c  ast.c  ast_to_string.c  builtin.c  builtin_old.txt  dl.c  env.c  eval.c  eval_old.c  io.c  lexer.c  main.c  math.c  parser.c  stack.c  string_builder.c  string_view.c  token.c  type.c
src/emit/: emit.c
src/emit/glsl/: emit_glsl.c
src/modules/: array.c  canvas.c  fetch.c  file.c  image.c  iterator.c  json.c  mat3.c  mat4.c  string.c  vec2.c  vec3.c  vec4.c
std/: std.gs
test/: CMakeLists.txt
test/samples/: add_add.gs  add_add.js  array.gs  arrow_func.gs  clamp.gs  cos_sin.gs  for.gs  for.js  func.gs  if.gs  if.js  minmax.gs  mix.gs  object.gs  object.js  plus_equals.gs  self.gs  struct.gs  sub_sub.gs  sub_sub.js  template_string.gs  var.gs  var.js  varfunc.gs  vec.gs  while.gs  while.js
test/src/: main.c
